--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,5 +5,13 @@
 {% endblock %}
 
 {% block content %}
-<p>This is just an awesome page.</p>
+<div class="btg-hero">
+	<h4 class="center">Hello, Buang! Unsay ayo diha? Wala? Pariha ta mga buang. Ako pa nimo pisliton ko ng button sa ubos ay.</h4>
+	<p class="center">~~~<p>
+	<p class="center">
+		<button class="button">UG PANGUTANA HIGALA!</button>
+	</p>
+</div>
+<p>Elit nulla repudiandae rerum aliquam voluptatum cum id fugiat dolorum quaerat? Saepe quasi dolores ipsam perferendis veritatis! Nisi quidem magni veritatis distinctio alias voluptatum nesciunt, quae obcaecati dolorum libero fugit.</p>
+<p>Elit nulla repudiandae rerum aliquam voluptatum cum id fugiat dolorum quaerat? Saepe quasi dolores ipsam perferendis veritatis! Nisi quidem magni veritatis distinctio alias voluptatum nesciunt, quae obcaecati dolorum libero fugit.</p>
 {% endblock %}
