--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -11,6 +11,16 @@
   {% endblock %}
 </head>
 <body>
-  {% block content %}{% endblock %}
+	<div class="container">
+		<header class="row">
+			{% include 'partials/header.html' %}
+		</header>
+		<main class="row">
+			{% block content %}{% endblock %}
+		</main>
+		<footer class="row">
+			{% include 'partials/footer.html' %}
+		</footer>
+	</div>
 </body>
 </html>
