--- a/app/views/home.html
+++ b/app/views/home.html
@@ -6,11 +6,11 @@
 
 {% block content %}
 <div class="btg-hero">
-	<h4 class="center">Hello, Buang! Unsay ayo diha? Wala? Pariha ta mga buang. Ako pa nimo pisliton ko ng button sa ubos ay.</h4>
-	<p class="center">~~~<p>
-	<p class="center">
-		<button class="button">UG PANGUTANA HIGALA!</button>
-	</p>
+  <h4 class="center">Hello, Buang! Unsay ayo diha? Wala? Pariha ta mga buang. Ako pa nimo pisliton ko ng button sa ubos ay.</h4>
+  <p class="center">~~~<p>
+  <p class="center">
+    <a href="/question" class="button">UG PANGUTANA HIGALA!</a>
+  </p>
 </div>
 <p>Elit nulla repudiandae rerum aliquam voluptatum cum id fugiat dolorum quaerat? Saepe quasi dolores ipsam perferendis veritatis! Nisi quidem magni veritatis distinctio alias voluptatum nesciunt, quae obcaecati dolorum libero fugit.</p>
 <p>Elit nulla repudiandae rerum aliquam voluptatum cum id fugiat dolorum quaerat? Saepe quasi dolores ipsam perferendis veritatis! Nisi quidem magni veritatis distinctio alias voluptatum nesciunt, quae obcaecati dolorum libero fugit.</p>
