Container related stuff
  I've added a watch script
  that allows host machine to
  watch specific file changes
  inside a folder and execute
  a command. This allows us to
  do TDD with dockerize app.

  AWESOME RIGHT?

Signed-off-by: Elizar Pepino <jupenz@gmail.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,11 +7,15 @@
 {% block content %}
 <div class="btg-hero">
   <h4 class="center">Hello, Buang! Unsay ayo diha? Wala? Pariha ta mga buang. Ako pa nimo pisliton ko ng button sa ubos ay.</h4>
-  <p class="center">~~~<p>
+  <p class="center">...<p>
   <p class="center">
-    <a href="/question" class="button">UG PANGUTANA HIGALA!</a>
+    <a href="/question" class="button button-primary">UG PANGUTANA HIGALA</a>
   </p>
 </div>
-<p>Elit nulla repudiandae rerum aliquam voluptatum cum id fugiat dolorum quaerat? Saepe quasi dolores ipsam perferendis veritatis! Nisi quidem magni veritatis distinctio alias voluptatum nesciunt, quae obcaecati dolorum libero fugit.</p>
-<p>Elit nulla repudiandae rerum aliquam voluptatum cum id fugiat dolorum quaerat? Saepe quasi dolores ipsam perferendis veritatis! Nisi quidem magni veritatis distinctio alias voluptatum nesciunt, quae obcaecati dolorum libero fugit.</p>
+<p class="center">Kahinumdom pa ka atong nagbitay ka sa kakaw?
+Sus, ayha ko makaabot, pirti bya gyod nimong kapyot.
+Hadlok man diay ka mabalian ug bukog!</p>
+<p class="center">
+	<em>- Alexjander Gwapito -</em>
+</p>
 {% endblock %}
