Update Question page

--- a/app/views/question.html
+++ b/app/views/question.html
@@ -5,5 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<p>I can post my awesome question.</p>
+<p>Ang pangutana nimo nga nag tangag og dako'ng ganti</p>
+<form>
+  <textarea class="u-full-width" placeholder="Pangutana"></textarea>
+  <input type="submit" value="Submit">
+</form>
 {% endblock %}
