Add Registration page and test scenario

--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -4,7 +4,7 @@
     </div>
     <div class="eight columns">
         <ul class="btg-nav right">
-            <li><a href="#">SIGN UP</a></li>
+            <li><a href="/register">SIGN UP</a></li>
             <li><a href="#">LOG IN</a></li>
         </ul>
     </div>
