Some koa-router related changes, please\n follow it accordingly
Signed-off-by: Elizar Pepino <jupenz@gmail.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% block title %}Home{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 {% block head %}
   {% parent %}
 {% endblock %}
@@ -9,7 +9,7 @@
   <h4 class="center">Hello, Buang! Unsay ayo diha? Wala? Pariha ta mga buang. Ako pa nimo pisliton ko ng button sa ubos ay.</h4>
   <p class="center">...<p>
   <p class="center">
-    <a href="/question" class="button button-primary">UG PANGUTANA HIGALA</a>
+    <a href="#" class="button button-primary">UG PANGUTANA HIGALA</a>
   </p>
 </div>
 <p class="center">Kahinumdom pa ka atong nagbitay ka sa kakaw?
