Mdae some ui changes
Signed-off-by: Elizar Pepino <jupenz@gmail.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,17 +5,5 @@
 {% endblock %}
 
 {% block content %}
-<div class="btg-hero">
-  <h4 class="center">Hello, Buang! Unsay ayo diha? Wala? Pariha ta mga buang. Ako pa nimo pisliton ko ng button sa ubos ay.</h4>
-  <p class="center">...<p>
-  <p class="center">
-    <a href="#" class="button button-primary">UG PANGUTANA HIGALA</a>
-  </p>
-</div>
-<p class="center">Kahinumdom pa ka atong nagbitay ka sa kakaw?
-Sus, ayha ko makaabot, pirti bya gyod nimong kapyot.
-Hadlok man diay ka mabalian ug bukog!</p>
-<p class="center">
-	<em>- Alexjander Gwapito -</em>
-</p>
+	<p>Ipsum optio ut quasi provident qui aut maxime perferendis quam quisquam? Alias beatae ab ullam assumenda cumque non. Consequatur corrupti eligendi exercitationem recusandae fuga vitae velit. Nulla quos quae quos?</p>
 {% endblock %}
