--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -1,5 +1,8 @@
-<div class="six columns">
-    <p>Copyright &copy; 2016, Buanga This Guy. All rights reserved.</p>
+<div class="container">
+    <div class="row">
+        <div class="twelve columns">
+            <p>Copyright &copy; 2016, Buanga This Guy. All rights reserved.</p>
+        </div>
+    </div>
 </div>
-<div class="six columns">
-</div>
+
