--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -1,10 +1,16 @@
-<nav class="nav">
-    <div class="four columns">
-        <a href="/" class="btg-title">Buanga This Guy</a>
+<div class="container">
+    <div class="row">
+        <nav class="nav">
+            <div class="four columns">
+                <a href="/" class="btg-title">BTG</a>
+            </div>
+            <div class="eight columns">
+                <ul class="btg-nav right">
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">faq</a></li>
+                    <li><a href="#">store</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
-    <div class="eight columns">
-        <ul class="btg-nav right">
-            <li><a href="#">LOG IN</a></li>
-        </ul>
-    </div>
-</nav>
+</div>
