--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,26 +1,28 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>{% block title %}My Site{% endblock %}</title>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-  <link rel="stylesheet" href="/css/main.css">
-  {% block head %}
-  {% endblock %}
+    <meta charset="utf-8">
+    <title>{% block title %}BTG{% endblock %}</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link rel="stylesheet" href="/css/main.css">
+    {% block head %}
+    {% endblock %}
 </head>
 <body>
-  <div class="container">
-    <header class="row">
-      {% include 'partials/header.html' %}
+    <header>
+        {% include 'partials/header.html' %}
     </header>
-    <main class="row">
-      {% block content %}{% endblock %}
+    <main>
+        <div class="container">
+            <div class="row">
+                {% block content %}{% endblock %}
+            </div>
+        </div>
     </main>
-    <footer class="row">
-      {% include 'partials/footer.html' %}
+    <footer>
+				{% include 'partials/footer.html' %}
     </footer>
-  </div>
 </body>
 </html>
