some ui updates
Signed-off-by: Elizar Pepino <jupenz@gmail.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -7,6 +7,6 @@
 {% block content %}
 	<form action="/question" method="POST">
 		<textarea class="u-full-width" name="question" placeholder="Imong pangutana" required></textarea>
-		<input class="button" type="submit" value="Ipangutana">
+		<input class="button button-btg" type="submit" value="Ipangutana">
 	</form>
 {% endblock %}
