Refactors some shit
- Mostly ui changes
- Use config based setups
- And more awesomeness!

Signed-off-by: Elizar Pepino <jupenz@gmail.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -12,6 +12,13 @@
     <input class="button button-btg" type="submit" value="Pangutana {{user.name}}">
   </form>
   {% else %}
-    <a href="/connect/facebook" class="button button-btg">Login First</a>
+	<div class="center">
+		<h1>I'm Back Bitches!</h1>
+		<h4>Sa bisaya pa. Namalik ang mga <em>Iro'ng Buang!</em></h4>
+		<br/>
+		<p>
+				<a href="/connect/facebook" class="button button-btg">LOG IN SA FACEBOOK</a>
+		</p>
+	</div>
   {% endif %}
 {% endblock %}
