--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -2,12 +2,11 @@
     <div class="row">
         <nav class="nav">
             <div class="four columns">
-                <a href="/" class="btg-title">BTG</a>
+                <a href="/" class="btg-title">Buanga This Guy</a>
             </div>
             <div class="eight columns">
                 <ul class="btg-nav right">
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">store</a></li>
+                    <li><a href="/about">About</a></li>
                     {% if user %}
                     <li><a href="/logout">log out</a></li>
                     {% endif %}
