--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -6,9 +6,9 @@
             </div>
             <div class="eight columns">
                 <ul class="btg-nav right">
-                    <li><a href="/about">About</a></li>
+                    <li><a href="/about">KABAHIN</a></li>
                     {% if user %}
-                    <li><a href="/logout">log out</a></li>
+                    <li><a href="/logout">Log Out</a></li>
                     {% endif %}
                 </ul>
             </div>
