Some UI Changes
Signed-off-by: Elizar Pepino <jupenz@gmail.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -12,8 +12,8 @@
 	{% endif %}
 	<div class="center">
 		<h3>I'm Back Bitches!</h3>
-		<p>Sa bisaya pa, namalik ang mga <em>Iro'ng Buang!</em></p>
-		<hr/>
+		<h5>Sa bisaya pa, namalik ang mga <em>Iro'ng Buang!</em></h5>
+		<br>
 	</div>
   {% if user %}
   <form action="/question" method="POST">
