ui updates desu!
Signed-off-by: Elizar Pepino <jupenz@gmail.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -24,7 +24,7 @@
   {% else %}
 	<div class="center">
 			<p>
-					<a href="/connect/facebook" class="button button-btg">LOG IN SA FACEBOOK</a>
+					<a href="/connect/facebook" class="button button-btg button-btg-round">LOG IN SA FACEBOOK</a>
 			</p>
 	</div>
   {% endif %}
