--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -8,6 +8,9 @@
                 <ul class="btg-nav right">
                     <li><a href="/about">about us</a></li>
                     {% if user %}
+                    {% if user.role === 'admin' %}
+                    <li><a href="/admin">admin</a></li>
+                    {% endif %}
                     <li><a href="/logout">log out</a></li>
                     <li>
                         <a href="/profile">
