--- a/app/views/home.html
+++ b/app/views/home.html
@@ -29,7 +29,7 @@
   {% else %}
   <div class="center">
     <p>
-      <a href="/connect/facebook" class="button button-btg button-btg-round">LOG IN SA FACEBOOK</a>
+      <a href="/connect/facebook" class="button button-btg button-btg-round"><i class="icon-lock"> </i> LOG IN SA FACEBOOK</a>
     </p>
   </div>
   {% endif %}
