--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -9,9 +9,9 @@
                     <li><a href="/about">about us</a></li>
                     {% if user %}
                     {% if user.role === 'admin' %}
-                    <li><a href="/admin">admin</a></li>
+                    <li><i class="icon-cog"> </i> <a href="/admin">admin</a></li>
                     {% endif %}
-                    <li><a href="/logout">log out</a></li>
+                    <li><i class="icon-unlock"> </i> <a href="/logout">log out</a></li>
                     <li>
                         <a href="/profile">
                             <img src="{{user.picture}}" class="profile-pic" />
