fix question routes and schema
- remove answer model
- modified question model
- user in creating question

Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/app/views/questions.html
+++ b/app/views/questions.html
@@ -15,7 +15,7 @@
   <hr>
   {% for question in questions %}
     {% if loop.first %}<ol>{% endif %}
-    <li><h4>{{question.content}}</h4></li>
+    <li><h4>{{question.text}}</h4></li>
     {% if loop.last %}</ol>{% endif %}
   {% endfor %}
 
