Fix Questions display error

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -10,7 +10,6 @@
 		<p>{{flash.error}}</p>
 	</div>
 	{% endif %}
-
   <div class="center">
     <h3>Manage Everything</h3>
     <hr>
@@ -18,6 +17,6 @@
   </div>
   <ul>
     <li>Users</li>
-    <li>Questions</li>
+    <li><a href="/admin/questions">Questions</a></li>
   </ul>
 {% endblock %}
