--- a/app/views/home.html
+++ b/app/views/home.html
@@ -16,20 +16,20 @@
   </div>
   {% endif %}
   <div class="center">
-    <h3>I'm Back Bitches!</h3>
-    <h5>Sa bisaya pa, namalik ang mga <em>Iro'ng Buang!</em></h5>
+    <h3>I am back, bitches!</h3>
+    <h5>Sa bisaya pa, namalik ang mga <em>iro'ng buang!</em></h5>
     <br>
   </div>
   {% if user %}
   <form action="/question" method="POST">
     <input type="hidden" name="_csrf" value="{{csrf}}">
     <textarea class="u-full-width" name="question" placeholder="Imong pangutana" required></textarea>
-    <input class="button button-btg" type="submit" value="Pangutana {{user.name}}">
+    <input class="button button-btg" type="submit" value="Pangutana, {{user.name}}">
   </form>
   {% else %}
   <div class="center">
     <p>
-      <a href="/connect/facebook" class="button button-btg button-btg-round"><i class="icon-lock"> </i> LOG IN SA FACEBOOK</a>
+      <a href="/connect/facebook" class="button button-btg button-btg-round"><i class="icon-lock"></i> LOG IN SA FACEBOOK</a>
     </p>
   </div>
   {% endif %}
