implement to answer the list questions
- create route to answer question
- display answered questions in home page
- display unanswered questions in admin page
- user that ask question is set to be anonymous

Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -40,9 +40,9 @@
           <div class="bubbled-left question-color">
               {{question.text}}
           </div>
-          {% if questions.answer.length %}
+	  {% if question.answer.length %}
             <div class="bubbled-right answer-color">
-              {{question.text}}
+	      {{question.answer}}
             </div>
           {% else %}
             <div class="bubbled-right waiting-color">
