Update view, and question list page

--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -1,8 +1,13 @@
 <div class="container">
-    <div class="row">
-        <div class="twelve columns">
-            <p>Copyright &copy; 2016, Buanga This Guy. All rights reserved.</p>
-        </div>
+  <div class="row">
+    <div class="twelve columns">
+      <ul class="btg-nav">
+        <li><a href="/suggestion">suggestion</a></li>
+        <li><a href="/about">about us</a></li>
+      </ul>
     </div>
+    <div class="twelve columns">
+      <p>Copyright &copy; 2016, Buanga This Guy. All rights reserved.</p>
+    </div>
+  </div>
 </div>
-
