fix bubble and add user view
Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/public/css/bubble.css
+++ b/public/css/bubble.css
@@ -68,7 +68,7 @@ ul {
   background-color: #f7777f;
   color: #d9f1f1;
 }
-.answer:before {
+.answer-color:before {
   border-bottom: 9px solid #f7777f;
 }
 .waiting-color {
