implement user promotion or add admin rights
- promote users
- modified home page view

Signed-off-by: Alexjander Bacalso <janderbacalso@gmail.com>

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'admin_layout.html' %}
 {% block title %}{{ title }}{% endblock %}
 {% block head %}
   {% parent %}
@@ -15,7 +15,7 @@
     <hr>
   </div>
   <ul>
-    <li>Users</li>
+    <li><a href="/admin/users">Users</a></li>
     <li><a href="/admin/questions">Questions</a></li>
   </ul>
 {% endblock %}
