--- a/public/css/bubble.css
+++ b/public/css/bubble.css
@@ -4,6 +4,7 @@ ul {
 .conversation-wrapper {
   padding: 20px 10px;
   overflow: hidden;
+  text-align: center;
 }
 
 .conversation-wrapper:first-child {
@@ -11,6 +12,12 @@ ul {
 }
 .question, .answer {
   margin: 10px;
+}
+.question {
+  text-align: left;
+}
+.answer {
+  text-align: right;
 }
 
 .question, .answer, .content-status, .content-profile {
@@ -35,6 +42,27 @@ ul {
 .profile-wrapper {
   border: 1px solid #d1d1d1;
   display: inherit;
+  margin-top: 15px;
+}
+
+.profile-wrapper:before, .profile-wrapper:after {
+  position: absolute;
+  font-weight: bold;
+}
+
+.question > .content-profile > .profile-wrapper:before {
+  content: 'Anonymous';
+  top: -25px;
+}
+
+.answer > .content-profile > .profile-wrapper:after {
+  content: 'BTG';
+  top: 83px;
+  left: 26px;
+}
+
+.answer > .content-profile > .profile-wrapper {
+  margin: 0 0 20px;
 }
 
 .content-text {
@@ -46,12 +74,16 @@ ul {
   max-height: 150px;
   margin: 0 20px;
   min-width: 600px;
+  max-width: 600px;
   background-color: #efefef;
 }
 .content-status i {
   display: block;
   text-align: left;
   margin: 5px 0;
+}
+.content-status form {
+  display: inline;
 }
 .content-status i:before {
   margin-right: 10px;
