--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,15 +1,4 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>{% block title %}BTG{% endblock %}</title>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-  <link rel="stylesheet" href="/css/main.css">
-  {% block head %}
-  {% endblock %}
-</head>
+{% include 'partials/head.html' %}
 <body>
   <header>
     {% include 'partials/header.html' %}
