--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -4,6 +4,7 @@
       <ul class="btg-nav">
         <li><a href="/suggestion">suggestion</a></li>
         <li><a href="/about">about us</a></li>
+        <li><a href="/faq">faq</a></li>
       </ul>
     </div>
     <div class="twelve columns">
