--- a/app/views/admin_layout.html
+++ b/app/views/admin_layout.html
@@ -5,11 +5,9 @@
   </header>
   <main>
     <div class="container">
-      <div style="position:relative;min-width:150px;height:100%;border:1px solid red;">
-
-      </div>
-      <div class="row" style="height: 2000px;">
-	{% block content %}{% endblock %}
+      <div style="position:relative; min-width:150px; height:100%;"></div>
+      <div class="row">
+        {% block content %}{% endblock %}
       </div>
     </div>
   </main>
@@ -17,6 +15,5 @@
     {% include 'partials/footer.html' %}
   </footer>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script type="text/javascript" src="/scripts/main.js"></script>
 </body>
 </html>
