Initial like implementation

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -54,7 +54,7 @@
         </div>
         <div class="answer">
           <span class="content-status">
-            <i class="icon-heart">{{question.likes.length}}</i>
+            <i class="icon-share">SHARE</i>
           </span>
           <span class="content-text">{{question.answer}}</span>
           <span class="content-profile">
